# DataEngineeringCopilot

./: .clineignore  .clinerules  .coverage  .coveragerc  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Dockerfile  INGESTION_TRACKING_PLAN.md  Makefile  PROJECT_CONTEXT.md  README.md  TESTING_STRATEGY.md  docker-compose.ci.yml  docker-compose.yml  logger_config.py  main.py  opencode.json  pyproject.toml  pytest.ini  requirements.txt  requirements_update.txt  setup.py  test_confidence_diagnostic.py
.clinerules/: behavioral-constraints.md  guardrails.md  python-env-rules.md
.github/workflows/: test.yml
.streamlit/: config.toml
config/: settings.py
data_engineering_copilot/: __init__.py  cli.py  factory.py  logging_config.py
data_engineering_copilot/api/: __init__.py  app.py  auth.py  diagnostic_routes.py  middleware.py  routes.py  run_api.py  run_server.py
data_engineering_copilot/config/: __init__.py  documentation_sources.json  logging.py  settings.py
data_engineering_copilot/domain/: __init__.py  exceptions.py  models.py  protocols.py
data_engineering_copilot/infrastructure/: __init__.py  async_crawler.py  async_embeddings.py  async_ollama_client.py  (+20 more)
logs/: diagnostic_report.json
scripts/: download_embedding_model.py  monitor_resources.py
tests/: conftest.py  test_api.py  test_api_integration.py  test_chunker.py  test_chunker_improved.py  test_chunking_factory.py  test_coverage_boost.py  test_crawl4ai_wrapper.py  test_crawler.py  test_e2e_integration.py  test_embeddings.py  test_html_parser.py  test_ingestion.py  test_ingestion_dedup.py  test_ingestion_integration.py  test_langfuse.py  test_langfuse_client.py  test_langfuse_integration.py  test_logging_config.py  test_missing_coverage.py  test_ollama_client.py  test_ollama_integration.py  test_qdrant_integration.py  test_qdrant_vector_store.py  test_qdrant_vector_store_full_part2.py  test_rag.py  test_rag_debug.py  test_rag_integration.py  test_semantic_chunker.py  test_settings.py  test_ui.py  test_ui_async.py  test_ui_ingestion.py  test_workers.py
(+139 files in other folders)
